work on users endpoint
